--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+  <html> 
+    <head>
+       <link href="spongebob.css" rel="stylesheet" type="text/css"> 
+       <meta charset="utf-8">
+       <title>Are you feeling it now, Mr. Krabs?</title>
+       <style>
+        td {color: #ffff00;}
+       </style>
+       <script language="javascript" type="text/javascript">
+        function playSound(soundfile) {
+        document.getElementById("dummy").innerHTML=
+        "<embed src=\""+soundfile+"\" hidden=\"true\" autostart=\"true\" loop=\"false\" />";
+        }
+       </script>
+    </head>
+      <body background="images/background.jpg">
+       <span id="dummy"></span>
+       <h1>Top 5 Spongebob Characters</h1>
+       <table width="fill" length="fill">
+        <tr><th>Rank</th><th width="100">Characters</th></tr>
+        <tr><td>1.</td><td><a href="http://spongebob.wikia.com/wiki/Squidward_Tentacles" target="_blank">Squidward</a><td><img src="images/squidward.jpg" width="100" height="75"/></td></tr>
+        <tr><td>2.</td><td><a href="http://spongebob.wikia.com/wiki/Eugene_H._Krabs" target="_blank">Mr. Krabs</a></td><td><img src="images/krabs.jpg" width="100" height="75"/></tr>
+        <tr><td>3.</td><td><a href="http://spongebob.wikia.com/wiki/Sheldon_J._Plankton" target="_blank">Plankton</a></td><td><img src="images/plankton.jpg" width="100" height="75"/></tr>
+        <tr><td>4.</td><td><a href="http://spongebob.wikia.com/wiki/Mrs._Puff" target="_blank">Mrs. Puff</a></td><td><img src="images/puff.jpg" width="100" height="75"/></tr>
+        <tr><td>5.</td><td><a href="http://spongebob.wikia.com/wiki/Sandy_Cheeks" target="_blank">Sandy</a></td><td><img src="images/sandy.jpg" width="100" height="75"/></tr>
+       </table>
+       <a href="#" onclick="playSound('laugh.mp3');"><img src="images/button.png"  width="100" height="100" class="center"></a>
+           <a href="http://spongebob.wikia.com/wiki/Encyclopedia_SpongeBobia" target="_blank"><h1>Click here for more information!</h1></a>
+     </body>
+  </html>    
+  
