--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <tr><td>4.</td><td><a href="http://spongebob.wikia.com/wiki/Mrs._Puff" target="_blank">Mrs. Puff</a></td><td><img src="images/puff.jpg" width="100" height="75"/></tr>
         <tr><td>5.</td><td><a href="http://spongebob.wikia.com/wiki/Sandy_Cheeks" target="_blank">Sandy</a></td><td><img src="images/sandy.jpg" width="100" height="75"/></tr>
        </table>
-       <a href="#" onclick="playSound('https://github.com/martian1567/martian1567.github.io/blob/master/laugh.mp3');"><img src="images/button.png"  width="100" height="100" class="center"></a>
+       <a href="#" onclick="playSound('https://raw.githubusercontent.com/martian1567/martian1567.github.io/master/laugh.mp3');"><img src="images/button.png"  width="100" height="100" class="center"></a>
            <a href="http://spongebob.wikia.com/wiki/Encyclopedia_SpongeBobia" target="_blank"><h1>Click here for more information!</h1></a>
      </body>
   </html>    
